objects/Prospect_Rating__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Prospect Ratings</relationshipLabel>
        <relationshipName>Prospect_Ratings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>AQ_Custom</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Target_Detail__c</fullName>
        <inlineHelpText>AQ_Custom</inlineHelpText>
        <label>Campaign Target Detail</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Campaign_Target__c</fullName>
        <inlineHelpText>AQ_Custom</inlineHelpText>
        <label>Campaign Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capacity_Rating__c</fullName>
        <inlineHelpText>AQ_Custom</inlineHelpText>
        <label>Capacity Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>$1,000-$4,999</fullName>
                </value>
                <value>
                    <fullName>$10,000-$24,999</fullName>
                </value>
                <value>
                    <fullName>$100,000-$249,999</fullName>
                </value>
                <value>
                    <fullName>$100,000 - 249,999</fullName>
                </value>
                <value>
                    <fullName>$10 Million - $14.9 Million</fullName>
                </value>
                <value>
                    <fullName>$15 Million - $29.9 Million</fullName>
                </value>
                <value>
                    <fullName>$1 Million - $2.9 Million</fullName>
                </value>
                <value>
                    <fullName>$25,000-$49,999</fullName>
                </value>
                <value>
                    <fullName>$250,000-$499,999</fullName>
                </value>
                <value>
                    <fullName>$30 Million +</fullName>
                </value>
                <value>
                    <fullName>$3 Million - $4.9 Million</fullName>
                </value>
                <value>
                    <fullName>$5,000-$9,999</fullName>
                </value>
                <value>
                    <fullName>$50,000-$99,999</fullName>
                </value>
                <value>
                    <fullName>$500,000-$999,999</fullName>
                </value>
                <value>
                    <fullName>$5 Million - $9.9 Million</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <inlineHelpText>AQ_Custom</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Screening_Service__c</fullName>
        <inlineHelpText>AQ_Custom</inlineHelpText>
        <label>External Screening Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GG&amp;A</fullName>
                </value>
                <value>
                    <fullName>Wealth Engine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Millennium_Key__c</fullName>
        <description>AQB Custom</description>
        <label>Millennium Key</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planned_Gift_Potential__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>AQ_Custom Indicator for Planned Gift capacity</inlineHelpText>
        <label>Planned Gift Potential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prospect_Rating_Detail__c</fullName>
        <inlineHelpText>AQ_Custom</inlineHelpText>
        <label>Prospect Rating Detail</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rating_Level__c</fullName>
        <inlineHelpText>AQ_Custom</inlineHelpText>
        <label>Rating Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Major Gift Prospect</fullName>
                </value>
                <value>
                    <fullName>Planned Gift Prospect</fullName>
                </value>
                <value>
                    <fullName>Principal Gift Prospect</fullName>
                </value>
                <value>
                    <fullName>Special Gift Prospect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>AQ_Custom</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <description>Prospect's Rating for major gift</description>
    <label>Prospect Rating</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Prospect Rating</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prospect Ratings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <recordTypes>
        <fullName>Capacity_Rating</fullName>
        <active>true</active>
        <description>This Capacity Rating is the prospect's estimated charitable gift capacity over a five year period regardless of recipient organization or level of interest.</description>
        <label>Capacity Rating</label>
    </recordTypes>
</CustomObject>